# gpx-analysis

./: README.md  pyproject.toml
gpxanalysis/: __init__.py  grade_visualizer.py  parser.py
tests/: test_grade_visualizer.py
tests/test_data/: flat_paved.gpx  hilly_mixed.gpx
